--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,7 +1,33 @@
-.btn-container{
-    height: 2rem ;
-    .btn-booking{
-        border-radius: .6rem;
-        text-transform: capitalize;
-    }
+.btn-container {
+  height: 2rem;
+  .btn-booking {
+    border-radius: 0.6rem;
+    text-transform: capitalize;
+  }
+}
+
+.image {
+  opacity: 0.8;
+  width: 200px;
+  height: auto;
+  background-position: center center;
+  display: inline-block;
+  margin: 10px;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.radio-img {
+  > input {
+    display: none;
+  }
+  > .image {
+    cursor: pointer;
+  }
+  > input:checked + .image {
+    outline: 3px solid blue;
+    outline-offset: 0.8rem;
+  }
 }
